# coordination_gap_detector

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DASHBOARD.md  Dockerfile  EXPLORE_MILESTONE_2.md  MILESTONES.md  MILESTONE_1_BREAKDOWN.md  MILESTONE_2_BREAKDOWN.md  MILESTONE_3_BREAKDOWN.md  QUICKSTART.md  README.md  READY_FOR_MILESTONE_3.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml  quick_start_milestone2.sh  streamlit_app.py
.github/: BRANCH_PROTECTION.md
.github/workflows/: test.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2025_12_08_2100-001_initial_schema.py
data/scenarios/: README.md
data/test_queries/: README.md  relevance_judgments.example.json
docs/: API.md  API_EXAMPLES.md  ARCHITECTURE.md  DEMO.md  ENTITY_EXTRACTION.md  EVALUATION.md  GAP_DETECTION.md  PROJECT_SHOWCASE_GUIDE.md  QUICKSTART.md  RANKING.md  README.md  TESTING.md  search_components_explained.md  three_database_architecture.md
docs/guides/: EXPLORE_MILESTONE_2.md  MILESTONE_DEMO_GUIDE.md  READY_FOR_MILESTONE_3.md
docs/milestones/: MILESTONES.md  MILESTONE_3_BREAKDOWN.md
notebooks/: gap_analysis_demo.ipynb
scripts/: __init__.py  evaluate_ranking.py  generate_mock_data.py  generate_test_queries.py  index_to_elasticsearch.py
src/: config.py  main.py
src/analysis/: __init__.py  entity_extraction.py  entity_types.py  similarity.py
src/api/: dependencies.py
src/api/routes/: __init__.py  evaluation.py  gaps.py  search.py
src/db/: __init__.py  elasticsearch.py  models.py  postgres.py  vector_store.py
src/detection/: __init__.py  clustering.py  cost_estimation.py  duplicate_work.py  impact_scoring.py  patterns.py  validators.py
src/ingestion/slack/: mock_client.py
src/models/: __init__.py  embeddings.py  llm.py  prompts.py  reasoning.py  schemas.py
src/ranking/: __init__.py  constants.py  evaluation.py  feature_config.py  features.py  metrics.py  scoring.py
src/search/: __init__.py  filters.py  hybrid_search.py  query_parser.py  retrieval.py
src/services/: __init__.py  detection_service.py  evaluation_service.py  search_service.py
src/utils/: __init__.py  text_processing.py  time_utils.py  token_utils.py
tests/: conftest.py  test_embeddings.py  test_mock_data.py  test_text_processing.py
tests/fixtures/: __init__.py  gap_scenarios.py  labeled_queries.json
tests/test_analysis/: test_entity_extraction.py
tests/test_api/: test_gaps.py  test_search.py
tests/test_db/: test_elasticsearch.py  test_postgres.py  test_vector_store.py
tests/test_detection/: test_clustering.py  test_duplicate_work.py  test_impact_scoring.py  test_similarity.py  test_validators.py
tests/test_integration/: test_clustering_integration.py  test_duplicate_detection_scenarios.py  test_e2e_gap_detection.py  test_elasticsearch_integration.py  test_search_flow.py
tests/test_models/: test_llm.py  test_reasoning.py
tests/test_performance/: test_benchmarks.py
tests/test_ranking/: test_bm25.py  test_edge_cases.py  test_evaluation.py  test_evaluation_framework.py  test_feature_config.py  test_features.py  test_integration.py  test_metrics.py
tests/test_search/: test_hybrid_search.py  test_query_parser.py  test_retrieval.py
tests/test_utils/: test_time_utils.py
