[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coordination-gap-detector"
version = "0.1.0"
description = "AI-powered coordination gap detection system for identifying failures across enterprise communication channels"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tim Duly", email = "timduly4@github.com"},
]
keywords = [
    "ai",
    "ml",
    "coordination",
    "enterprise",
    "slack",
    "github",
    "information-retrieval",
    "ranking",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # AI/ML Components
    "anthropic>=0.18.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "chromadb>=0.4.22",
    "scikit-learn>=1.4.0",
    "tiktoken>=0.6.0",

    # Search & Ranking
    "elasticsearch>=8.12.0",
    "sentence-transformers>=2.3.0",
    "torch>=2.0.0,<2.2.0",  # Pin torch to version with macOS Intel support
    "numpy<2.0.0",  # Required for torch 2.1.x compatibility
    "transformers>=4.35.0,<4.40.0",  # Compatible with torch 2.1.x

    # Data Ingestion & Integration
    "slack-sdk>=3.26.0",
    "google-auth>=2.27.0",
    "google-api-python-client>=2.115.0",
    "PyGithub>=2.1.1",
    "jira>=3.6.0",

    # Data & Storage
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "redis>=5.0.1",
    "alembic>=1.13.1",

    # Infrastructure & Orchestration
    "celery>=5.3.6",
    "kafka-python>=2.0.2",
    "prometheus-client>=0.19.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.3",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
    "aiosqlite>=0.19.0",
]

graph = [
    "neo4j>=5.16.0",
]

monitoring = [
    "sentry-sdk[fastapi]>=1.40.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.1",
    "pandas>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/timduly4/coordination_gap_detector"
Repository = "https://github.com/timduly4/coordination_gap_detector"
Issues = "https://github.com/timduly4/coordination_gap_detector/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "slack_sdk.*",
    "kafka.*",
    "celery.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests (require external services)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
